WEB-INF/classes/compile_errors_utf8.txt
javac : c:\xampp\tomca
t\webapps\Ocean-resort
_2\WEB-INF\classes\com
\oceanview\dao\RoomTyp
eDAO.java:7: error: 
cannot access 
DBConnection
At line:1 char:1
+ javac -cp ".;c:\xamp
p\tomcat\lib\*;c:\xamp
p\tomcat\webapps\Ocean
-reso ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (c:\xampp\t   
 omcat...ss DBConn    
ection:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
import com.oceanview.u
til.DBConnection;
                      
   ^
  bad class file: .\co
m\oceanview\util\DBCon
nection.class
    class file has 
wrong version 69.0, 
should be 55.0
    Please remove or 
make sure it appears 
in the correct 
subdirectory of the 
classpath.
c:\xampp\tomcat\webapp
s\Ocean-resort_2\WEB-I
NF\classes\com\oceanvi
ew\dao\RoomTypeDAO.jav
a:13: error: cannot 
find symbol
        Connection 
conn = DBConnection.ge
tConnection();
                      
    ^
  symbol:   variable 
DBConnection
  location: class 
RoomTypeDAO
c:\xampp\tomcat\webapp
s\Ocean-resort_2\WEB-I
NF\classes\com\oceanvi
ew\dao\RoomTypeDAO.jav
a:35: error: cannot 
find symbol
        Connection 
conn = DBConnection.ge
tConnection();
                      
    ^
  symbol:   variable 
DBConnection
  location: class 
RoomTypeDAO
c:\xampp\tomcat\webapp
s\Ocean-resort_2\WEB-I
NF\classes\com\oceanvi
ew\dao\RoomTypeDAO.jav
a:57: error: cannot 
find symbol
        Connection 
conn = DBConnection.ge
tConnection();
                      
    ^
  symbol:   variable 
DBConnection
  location: class 
RoomTypeDAO
c:\xampp\tomcat\webapp
s\Ocean-resort_2\WEB-I
NF\classes\com\oceanvi
ew\dao\RoomTypeDAO.jav
a:78: error: cannot 
find symbol
        Connection 
conn = DBConnection.ge
tConnection();
                      
    ^
  symbol:   variable 
DBConnection
  location: class 
RoomTypeDAO
5 errors
